# MaharajaC

./: .gitignore  CMakeLists.txt  README.md  main
docs/: doc.txt
include/: Game.h  State.h
src/: Game.cpp  Game.h  app.cpp
tst/: ScoreTest.cpp
